spectec/test/elab/neg/ctx-type-redefined.t
  $ ./main.exe ctx-type-redefined.spectec 2>&1
  error: type `foo` was already defined
    --> ctx-type-redefined.spectec:4:8
    |
  4 | syntax foo
    |        ^^^
    = source: elab
  [1]
